<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_dialog_rating"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_rating"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_dialog_rating"
            android:padding="5dp"
            android:text="@string/Rating"
            android:textSize="16sp">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111">

        <TextView
            android:id="@+id/btn_ok_dialog_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_btn_navigator1101"
            android:padding="10dp"
            android:text="@string/Ok"
            android:textColor="#ffc119"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/btn_cancel_dialog_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/btn_ok_dialog_rating"
            android:background="@drawable/custom_btn_navigator1101"
            android:padding="10dp"
            android:text="@string/Cancel"
            android:textColor="#ffc119"
            android:textStyle="bold"></TextView>

    </RelativeLayout>

</LinearLayout>